--- a/services/kali-engine/Dockerfile
+++ b/services/kali-engine/Dockerfile
@@ -11,17 +11,17 @@ RUN apt update && apt install -y \
     && update-ca-certificates \
     && apt clean
 
-COPY services/recon-engine/requirements.txt /opt/recon/requirements.txt
+COPY services/kali-engine/requirements.txt /opt/kali/requirements.txt
 
 RUN pip install --no-cache-dir \
     --trusted-host pypi.org \
     --trusted-host files.pythonhosted.org \
-    -r /opt/recon/requirements.txt
+    -r /opt/kali/requirements.txt
 
-COPY services/recon-engine/app /opt/recon/app
-WORKDIR /opt/recon/app
+COPY services/kali-engine/app /opt/kali/app
+WORKDIR /opt/kali/app
 
-COPY services/recon-engine/entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY services/kali-engine/entrypoint.sh /usr/local/bin/entrypoint.sh
 RUN sed -i 's/\r$//' /usr/local/bin/entrypoint.sh && chmod +x /usr/local/bin/entrypoint.sh
 
 EXPOSE 5000
